update routes to match frontend
